# weightfield2

./: .gitignore  CMakeLists.txt  Carriers.cxx  CarriersNoGui.cxx  Dict.cxx  Dict.h  DynamicSliceY.C  Makefile  Potentials.cxx  Potentials.h  Potentials_II.cxx  Potentials_OK.cxx  Potentials_good.cxx  Potentials_old.cxx  README.md  WFGUI.cxx  WFGUI.cxx_old  compile.sh  weightfield  wf_BV790_DV50_W929_H193_SP300_SW290_G1_GR0_T300_A0_D0_BW0_MIPU75.txt_1  wf_BV790_DV50_W929_H193_SP300_SW290_G1_GR0_T300_A0_D0_BW0_MIPU75.txt_TW  wf_BV790_DV50_W929_H193_SP300_SW290_G1_GR0_T300_A0_D0_BW2_MIPU75.txt_1  wf_BV790_DV50_W929_H193_SP300_SW290_G1_GR0_T300_A0_D0_BW2_MIPU75.txt_TW  wfnogui.cpp
cmake/: FindROOT.cmake
data/: CMakeLists.txt
src/: CMakeLists.txt  Carriers.cxx  Carriers.h  Dict.h  Field.cxx  Field.h  Potentials.cxx  Potentials.h  WFGUI.cxx  WFGUI.h  WeightfieldCLI.cpp  WeightfieldClass.cpp  WeightfieldClass.h
test/: CMakeLists.txt
